--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,5 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".UI.ConfigActivity"
+                  android:label="@string/app_name">
+        </activity>
     </application>
 </manifest>
