--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:debuggable="true" android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name=".UI.MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
